fixed navbar and scrollbar issues

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,16 @@
 :root {
   scroll-behavior: smooth;
 }
+
+app-sidenav {
+  position: absolute;
+  top: 56px;
+}
+
+@media only screen and (min-width: 600px) {
+
+  app-sidenav {
+    top: 64px;
+  }
+
+}
