--- a/src/app/components/skills/skills.component.scss
+++ b/src/app/components/skills/skills.component.scss
@@ -1,15 +1,17 @@
 .content {
-  height: calc(100vh - 56px);
+  height: calc(150vh - 56px);
   padding-top: 56px;
   margin-top: -56px;
 
   display: flex;
   flex-direction: column;
+
 }
 
-.personal-info {
+.flex-column {
   display: flex;
   flex-direction: column;
+
 }
 
 .list-header {
