--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,15 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
+html, body { overflow: hidden; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .navbar-allowance {
   margin-top: -56px;
   padding-top: 56px;
-}
-
-.header {
-  margin: 0.5rem auto;
 }
 
 .headline {
